--- a/core/src/main/res/layout/oauth_login_activity.xml
+++ b/core/src/main/res/layout/oauth_login_activity.xml
@@ -21,4 +21,11 @@
         android:layout_height="fill_parent"
         android:layout_below="@id/toolbar_main_activity" />
 
+    <ProgressBar
+        android:id="@+id/pb_loading_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminateDrawable="@drawable/circular_progress_bar" />
+
 </RelativeLayout>
